# PersonalPythonPackage

./: .coveragerc  .gitignore  PersonalPythonPackage.py  README.md  __init__.py  pyproject.toml
.github/workflows/: codecov.yml  main.yml  pytest.yml  unittest.yml
TMMPythonPackage/: __init__.py  __main__.py
src/: TMMPythonPackage.py  __init__.py
tests/: test_TMMPythonPackage.py
