[project]
name = "TMMPythonPackage"
version = "0.0.3"
authors = [
  { name="Richie Cahill", email="Richie@TMMWorkShop.com" },
]
description = "this is a personal package so i don't have to duplicate code"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"